welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var x = litMessage()
^